<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/TakeARest"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#e9c26d"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/youWantToLevel"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#e9c26d"
        android:textSize="15sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_alignLeft="@+id/btn_exit_game"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="18dp"
        android:background="@drawable/selector_options_background"
        android:text="@string/returnToGame"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@drawable/selector_options_text"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_exit_game"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_below="@+id/btn_cancel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:background="@drawable/selector_options_background"
        android:text="@string/exit_game"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@drawable/selector_options_text"
        android:textSize="25sp"
        android:textStyle="bold" />

</RelativeLayout>